All_Component_DX/force-app/main/default/objects/Service_Contract_Services__c/Service_Contract_Services__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>List of services customer is entitled to by this contract.</description>
    <label>Included Service</label>
    <nameField>
        <displayFormat>SCSN-{000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Included Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>