All_Component_DX/force-app/main/default/objects/Service_Contract_Services__c/fields/Consumed_Units__c.field-meta.xml
<CustomField>
    <fullName>Consumed_Units__c</fullName>
    <label>Consumed Units</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>