All_Component_DX/force-app/main/default/objects/Service_Contract_Services__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the service. Is a lookup to an existing service record in ServiceMax</description>
    <inlineHelpText>Name of the service. Is a lookup to an existing service record in ServiceMax</inlineHelpText>
    <label>Service Type</label>
    <referenceTo>Service__c</referenceTo>
    <relationshipName>R00N70000001hzdlEAA</relationshipName>
    <type>Lookup</type>
</CustomField>