All_Component_DX/force-app/main/default/objects/Service_Contract_Services__c/fields/Service_Contract__c.field-meta.xml
<CustomField>
    <fullName>Service_Contract__c</fullName>
    <description>Name of the service contract. Is a lookup to an existing service contract in ServiceMax</description>
    <inlineHelpText>Name of the service contract. Is a lookup to an existing service contract in ServiceMax</inlineHelpText>
    <label>Service/Maintenance Contract</label>
    <referenceTo>Service_Contract__c</referenceTo>
    <relationshipName>R00N70000001hzdmEAA</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>