All_Component_DX/force-app/main/default/objects/Service_Contract_Services__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <description>Type of service covered by the service contract. Use this to entitle multiple services in one record. (Do Not Use)</description>
    <inlineHelpText>Type of service covered by the service contract. Use this to entitle multiple services in one record. (Do Not Use)</inlineHelpText>
    <label>Service Type (Do Not Use)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>