All_Component_DX/force-app/main/default/objects/Service_Contract_Services__c/fields/Travel_Discount_Not_Covered__c.field-meta.xml
<CustomField>
    <fullName>Travel_Discount_Not_Covered__c</fullName>
    <label>Travel Discount - Not Covered</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>